# speedrun-rust-cli

./: Cargo.toml  readme.md
src/: main.rs
