[package]
name = "speedrun-rust-cli"
version = "0.1.0"
authors = ["Benjamin Lannon <benjamin@lannonbr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "1.1.1"
tabular = "0.1.4"
iso8601 = "0.4.0"
structopt = "0.3"
dialoguer = "0.6"